--- a/projekt-cny/projekt-cny/package.json
+++ b/projekt-cny/projekt-cny/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.19.2",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-places-autocomplete": "^4.0.1",
+    "vite-plugin-cdn-import": "^0.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
