--- a/projekt-cny/projekt-cny/.env
+++ b/projekt-cny/projekt-cny/.env
@@ -1,1 +1,1 @@
-MY_GOOGLE_MAPS_API_KEY = "AIzaSyAvJsjgt9aZpjLQMWJAM1RnC6YKlQcKDDs";
+VITE_MY_GOOGLE_MAPS_API_KEY = "AIzaSyAvJsjgt9aZpjLQMWJAM1RnC6YKlQcKDDs"
